test/invalid/bad.zone
$TTL 3600       ; 1 hour
example.com.    IN SOA  ns1.example.com. admin.example.com. (
                        2023101701  ; serial
                        3600        ; refresh (1 hour)
                        1800        ; retry (30 minutes)
                        604800      ; expire (1 week)
                        86400       ; minimum (1 day)
                        )
                IN NS   ns1.example.com.
                IN NS   ns2.example.com.
                IN MX   10 mail.example.com.
                IN A    203.0.113.10

; This is invalid: "www" has both CNAME and A records
www             IN CNAME webserver.example.net.
www             IN A     203.0.113.15
